--- a/vdio/summary-video.html
+++ b/vdio/summary-video.html
@@ -54,6 +54,6 @@
 <body>
   <h1>🚧 الخدمة قيد الإنشاء 🚧</h1>
   <p>نعتذر، خدمة تحويل الملفات إلى فيديو تحت التطوير حالياً.<br>سيتم تفعيلها قريباً.</p>
-  <a href="/index.html">🔙 العودة للصفحة الرئيسية</a>
+  <a href="https://baneen2323.github.io/Bah-Nin-Academic-Platform/">🔙 العودة للصفحة الرئيسية</a>
 </body>
 </html>
